--- a/index.html/index.html
+++ b/index.html/index.html
@@ -74,13 +74,14 @@
      <section class="online-class" id="online">
         <h1>Join our online class</h1>
          </section>
-         <div class="online">
-            <img src="images/boy-studying.jpg" alt="male student">
-         </div>
+       <div class="video-preview">
+  <img src="images/boy-studying.jpg" alt="male student" />
+  <a href="https://youtu.be/6wx8RIynJGw?si=f5MTaxT9g74_h9Sh" target="_blank" class="play-btn" title="Watch Video">
+    <div class="triangle"></div>
+  </a>
+</div>
 
-         <div class="youtube">
-            <a href="https://youtu.be/6wx8RIynJGw?si=f5MTaxT9g74_h9Sh"><button>watch now</button></a>
-         </div>
+
        
     
 
