--- a/index.html/index.html
+++ b/index.html/index.html
@@ -34,6 +34,10 @@
  
    </section>
 
+   <section class="front">
+    <h1>Watch our live match</h1>
+   </section>
+
    <div class="class">
     <div class="main">
         <div class="image">
